TP03/Mu-evalntype/MuParser.py
# Generated from Mu.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MuParser ( Parser ):

    grammarFileName = "Mu.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'||'", "'&&'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'^'", "'!'", "':'", "';'", "','", "'='", "'('", 
                     "')'", "'{'", "'}'", "'true'", "'false'", "'nil'", 
                     "'if'", "'else'", "'while'", "'log'", "'var'", "'int'", 
                     "'float'", "'string'", "'bool'" ]

    symbolicNames = [ "<INVALID>", "OR", "AND", "EQ", "NEQ", "GT", "LT", 
                      "GTEQ", "LTEQ", "PLUS", "MINUS", "MULT", "DIV", "MOD", 
                      "POW", "NOT", "COL", "SCOL", "COM", "ASSIGN", "OPAR", 
                      "CPAR", "OBRACE", "CBRACE", "TRUE", "FALSE", "NIL", 
                      "IF", "ELSE", "WHILE", "LOG", "VAR", "INTTYPE", "FLOATTYPE", 
                      "STRINGTYPE", "BOOLTYPE", "ID", "INT", "FLOAT", "STRING", 
                      "COMMENT", "SPACE", "OTHER" ]

    RULE_prog = 0
    RULE_vardecl_l = 1
    RULE_vardecl = 2
    RULE_id_l = 3
    RULE_block = 4
    RULE_stat = 5
    RULE_assignment = 6
    RULE_if_stat = 7
    RULE_condition_block = 8
    RULE_stat_block = 9
    RULE_while_stat = 10
    RULE_log = 11
    RULE_expr = 12
    RULE_atom = 13
    RULE_typee = 14

    ruleNames =  [ "prog", "vardecl_l", "vardecl", "id_l", "block", "stat", 
                   "assignment", "if_stat", "condition_block", "stat_block", 
                   "while_stat", "log", "expr", "atom", "typee" ]

    EOF = Token.EOF
    OR=1
    AND=2
    EQ=3
    NEQ=4
    GT=5
    LT=6
    GTEQ=7
    LTEQ=8
    PLUS=9
    MINUS=10
    MULT=11
    DIV=12
    MOD=13
    POW=14
    NOT=15
    COL=16
    SCOL=17
    COM=18
    ASSIGN=19
    OPAR=20
    CPAR=21
    OBRACE=22
    CBRACE=23
    TRUE=24
    FALSE=25
    NIL=26
    IF=27
    ELSE=28
    WHILE=29
    LOG=30
    VAR=31
    INTTYPE=32
    FLOATTYPE=33
    STRINGTYPE=34
    BOOLTYPE=35
    ID=36
    INT=37
    FLOAT=38
    STRING=39
    COMMENT=40
    SPACE=41
    OTHER=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MuParser.RULE_prog

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgRuleContext(ProgContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ProgContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def vardecl_l(self):
            return self.getTypedRuleContext(MuParser.Vardecl_lContext,0)

        def block(self):
            return self.getTypedRuleContext(MuParser.BlockContext,0)

        def EOF(self):
            return self.getToken(MuParser.EOF, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgRule" ):
                return visitor.visitProgRule(self)
            else:
                return visitor.visitChildren(self)



    def prog(self):

        localctx = MuParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            localctx = MuParser.ProgRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.vardecl_l()
            self.state = 31
            self.block()
            self.state = 32
            self.match(MuParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Vardecl_lContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MuParser.RULE_vardecl_l

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarDeclListContext(Vardecl_lContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.Vardecl_lContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.VardeclContext)
            else:
                return self.getTypedRuleContext(MuParser.VardeclContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclList" ):
                return visitor.visitVarDeclList(self)
            else:
                return visitor.visitChildren(self)



    def vardecl_l(self):

        localctx = MuParser.Vardecl_lContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vardecl_l)
        self._la = 0 # Token type
        try:
            localctx = MuParser.VarDeclListContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MuParser.VAR:
                self.state = 34
                self.vardecl()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MuParser.RULE_vardecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarDeclContext(VardeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.VardeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(MuParser.VAR, 0)
        def id_l(self):
            return self.getTypedRuleContext(MuParser.Id_lContext,0)

        def COL(self):
            return self.getToken(MuParser.COL, 0)
        def typee(self):
            return self.getTypedRuleContext(MuParser.TypeeContext,0)

        def SCOL(self):
            return self.getToken(MuParser.SCOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)



    def vardecl(self):

        localctx = MuParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            localctx = MuParser.VarDeclContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(MuParser.VAR)
            self.state = 41
            self.id_l()
            self.state = 42
            self.match(MuParser.COL)
            self.state = 43
            self.typee()
            self.state = 44
            self.match(MuParser.SCOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_lContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MuParser.RULE_id_l

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IdListBaseContext(Id_lContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.Id_lContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MuParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdListBase" ):
                return visitor.visitIdListBase(self)
            else:
                return visitor.visitChildren(self)


    class IdListContext(Id_lContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.Id_lContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MuParser.ID, 0)
        def COM(self):
            return self.getToken(MuParser.COM, 0)
        def id_l(self):
            return self.getTypedRuleContext(MuParser.Id_lContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdList" ):
                return visitor.visitIdList(self)
            else:
                return visitor.visitChildren(self)



    def id_l(self):

        localctx = MuParser.Id_lContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_id_l)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = MuParser.IdListBaseContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.match(MuParser.ID)
                pass

            elif la_ == 2:
                localctx = MuParser.IdListContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(MuParser.ID)
                self.state = 48
                self.match(MuParser.COM)
                self.state = 49
                self.id_l()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MuParser.RULE_block

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StatListContext(BlockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.BlockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.StatContext)
            else:
                return self.getTypedRuleContext(MuParser.StatContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatList" ):
                return visitor.visitStatList(self)
            else:
                return visitor.visitChildren(self)



    def block(self):

        localctx = MuParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        self._la = 0 # Token type
        try:
            localctx = MuParser.StatListContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MuParser.IF) | (1 << MuParser.WHILE) | (1 << MuParser.LOG) | (1 << MuParser.ID) | (1 << MuParser.OTHER))) != 0):
                self.state = 52
                self.stat()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._OTHER = None # Token

        def assignment(self):
            return self.getTypedRuleContext(MuParser.AssignmentContext,0)


        def if_stat(self):
            return self.getTypedRuleContext(MuParser.If_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(MuParser.While_statContext,0)


        def log(self):
            return self.getTypedRuleContext(MuParser.LogContext,0)


        def OTHER(self):
            return self.getToken(MuParser.OTHER, 0)

        def getRuleIndex(self):
            return MuParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = MuParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stat)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MuParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.assignment()
                pass
            elif token in [MuParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.if_stat()
                pass
            elif token in [MuParser.WHILE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.while_stat()
                pass
            elif token in [MuParser.LOG]:
                self.enterOuterAlt(localctx, 4)
                self.state = 61
                self.log()
                pass
            elif token in [MuParser.OTHER]:
                self.enterOuterAlt(localctx, 5)
                self.state = 62
                localctx._OTHER = self.match(MuParser.OTHER)
                print("unknown char: {}".format((None if localctx._OTHER is None else localctx._OTHER.text)))
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MuParser.RULE_assignment

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignStatContext(AssignmentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.AssignmentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MuParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(MuParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(MuParser.ExprContext,0)

        def SCOL(self):
            return self.getToken(MuParser.SCOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStat" ):
                return visitor.visitAssignStat(self)
            else:
                return visitor.visitChildren(self)



    def assignment(self):

        localctx = MuParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            localctx = MuParser.AssignStatContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(MuParser.ID)
            self.state = 67
            self.match(MuParser.ASSIGN)
            self.state = 68
            self.expr(0)
            self.state = 69
            self.match(MuParser.SCOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MuParser.RULE_if_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfStatContext(If_statContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.If_statContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(MuParser.IF)
            else:
                return self.getToken(MuParser.IF, i)
        def condition_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.Condition_blockContext)
            else:
                return self.getTypedRuleContext(MuParser.Condition_blockContext,i)

        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(MuParser.ELSE)
            else:
                return self.getToken(MuParser.ELSE, i)
        def stat_block(self):
            return self.getTypedRuleContext(MuParser.Stat_blockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)



    def if_stat(self):

        localctx = MuParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_stat)
        try:
            localctx = MuParser.IfStatContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(MuParser.IF)
            self.state = 72
            self.condition_block()
            self.state = 78
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 73
                    self.match(MuParser.ELSE)
                    self.state = 74
                    self.match(MuParser.IF)
                    self.state = 75
                    self.condition_block() 
                self.state = 80
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 81
                self.match(MuParser.ELSE)
                self.state = 82
                self.stat_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Condition_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MuParser.RULE_condition_block

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CondBlockContext(Condition_blockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.Condition_blockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MuParser.ExprContext,0)

        def stat_block(self):
            return self.getTypedRuleContext(MuParser.Stat_blockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondBlock" ):
                return visitor.visitCondBlock(self)
            else:
                return visitor.visitChildren(self)



    def condition_block(self):

        localctx = MuParser.Condition_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition_block)
        try:
            localctx = MuParser.CondBlockContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.expr(0)
            self.state = 86
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stat_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBRACE(self):
            return self.getToken(MuParser.OBRACE, 0)

        def block(self):
            return self.getTypedRuleContext(MuParser.BlockContext,0)


        def CBRACE(self):
            return self.getToken(MuParser.CBRACE, 0)

        def stat(self):
            return self.getTypedRuleContext(MuParser.StatContext,0)


        def getRuleIndex(self):
            return MuParser.RULE_stat_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_block" ):
                return visitor.visitStat_block(self)
            else:
                return visitor.visitChildren(self)




    def stat_block(self):

        localctx = MuParser.Stat_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stat_block)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MuParser.OBRACE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(MuParser.OBRACE)
                self.state = 89
                self.block()
                self.state = 90
                self.match(MuParser.CBRACE)
                pass
            elif token in [MuParser.IF, MuParser.WHILE, MuParser.LOG, MuParser.ID, MuParser.OTHER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.stat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MuParser.RULE_while_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStatContext(While_statContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.While_statContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(MuParser.WHILE, 0)
        def expr(self):
            return self.getTypedRuleContext(MuParser.ExprContext,0)

        def stat_block(self):
            return self.getTypedRuleContext(MuParser.Stat_blockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStat" ):
                return visitor.visitWhileStat(self)
            else:
                return visitor.visitChildren(self)



    def while_stat(self):

        localctx = MuParser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_while_stat)
        try:
            localctx = MuParser.WhileStatContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(MuParser.WHILE)
            self.state = 96
            self.expr(0)
            self.state = 97
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MuParser.RULE_log

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LogStatContext(LogContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.LogContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LOG(self):
            return self.getToken(MuParser.LOG, 0)
        def expr(self):
            return self.getTypedRuleContext(MuParser.ExprContext,0)

        def SCOL(self):
            return self.getToken(MuParser.SCOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogStat" ):
                return visitor.visitLogStat(self)
            else:
                return visitor.visitChildren(self)



    def log(self):

        localctx = MuParser.LogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_log)
        try:
            localctx = MuParser.LogStatContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(MuParser.LOG)
            self.state = 100
            self.match(MuParser.OPAR)
            self.state = 101
            self.expr(0)
            self.state = 102
            self.match(MuParser.CPAR)
            self.state = 103
            self.match(MuParser.SCOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MuParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NotExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(MuParser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(MuParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExpr" ):
                return visitor.visitNotExpr(self)
            else:
                return visitor.visitChildren(self)


    class UnaryMinusExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUS(self):
            return self.getToken(MuParser.MINUS, 0)
        def expr(self):
            return self.getTypedRuleContext(MuParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryMinusExpr" ):
                return visitor.visitUnaryMinusExpr(self)
            else:
                return visitor.visitChildren(self)


    class AtomExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(MuParser.AtomContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomExpr" ):
                return visitor.visitAtomExpr(self)
            else:
                return visitor.visitChildren(self)


    class OrExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.ExprContext)
            else:
                return self.getTypedRuleContext(MuParser.ExprContext,i)

        def OR(self):
            return self.getToken(MuParser.OR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)


    class AdditiveExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.myop = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.ExprContext)
            else:
                return self.getTypedRuleContext(MuParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(MuParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(MuParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditiveExpr" ):
                return visitor.visitAdditiveExpr(self)
            else:
                return visitor.visitChildren(self)


    class PowExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.ExprContext)
            else:
                return self.getTypedRuleContext(MuParser.ExprContext,i)

        def POW(self):
            return self.getToken(MuParser.POW, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPowExpr" ):
                return visitor.visitPowExpr(self)
            else:
                return visitor.visitChildren(self)


    class RelationalExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.myop = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.ExprContext)
            else:
                return self.getTypedRuleContext(MuParser.ExprContext,i)

        def GT(self):
            return self.getToken(MuParser.GT, 0)
        def LT(self):
            return self.getToken(MuParser.LT, 0)
        def GTEQ(self):
            return self.getToken(MuParser.GTEQ, 0)
        def LTEQ(self):
            return self.getToken(MuParser.LTEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationalExpr" ):
                return visitor.visitRelationalExpr(self)
            else:
                return visitor.visitChildren(self)


    class MultiplicativeExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.myop = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.ExprContext)
            else:
                return self.getTypedRuleContext(MuParser.ExprContext,i)

        def MULT(self):
            return self.getToken(MuParser.MULT, 0)
        def DIV(self):
            return self.getToken(MuParser.DIV, 0)
        def MOD(self):
            return self.getToken(MuParser.MOD, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicativeExpr" ):
                return visitor.visitMultiplicativeExpr(self)
            else:
                return visitor.visitChildren(self)


    class EqualityExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.myop = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.ExprContext)
            else:
                return self.getTypedRuleContext(MuParser.ExprContext,i)
